# psd-web

./: .gitignore
Instructions/: PSD_FASE1_DEPLOY.md  PSD_FASE1_INDEX.md  PSD_Roadmap_Fase_1.md
Instructions/Dokumentasi-psd/: git-push.mdx
Instructions/Fase-0/: PSD_Backend_LANGKAH_5_Registry.md  PSD_Backend_LANGKAH_8_Seed_Sambung_E2E.md  PSD_Backend_LANGKAH_9_Pengerasan.md
Instructions/Fase-0-backend/: PSD_Backend_LANGKAH_0_Indeks.md  PSD_Backend_LANGKAH_1_Setup_Proyek.md  PSD_Backend_LANGKAH_2_Docker_Infra.md  PSD_Backend_LANGKAH_3_Database_dan_Schema.md  PSD_Backend_LANGKAH_4_Auth.md  PSD_Backend_LANGKAH_6_Kompetisi_Event.md  PSD_Backend_LANGKAH_7_Komunitas_Belajar.md
Instructions/Gamifikasi-sumber/: GAMIFIKASI_KUOTA_BRIEF.md  quota.py  seams.py  tiers.py
Instructions/Langkah-48/: models.py  (+6 more)
deploy/: .env.example  Caddyfile  README.md  docker-compose.gitea-passthrough.yml  docker-compose.local.yml  docker-compose.prod.yml
psd-backend/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  requirements.txt
psd-frontend/: .dockerignore  .env.example  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json  tsconfig.json
psd-gamification/: README.md  pyproject.toml
psd-gamification/psd_gamification/: __init__.py  badges.py  data.py  gamification.json  points.py  quota.py  seams.py  tiers.py
psd-gamification/psd_gamification.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
psd-gamification/tests/: test_gamification.py
psd-jupyterhub/: jupyterhub_config.py
psd-notebook/: pyproject.toml
psd-superset/: superset_config.py
(+1484 files in other folders)
